# ros_workspace_2025

./: .gitignore  README.md  startDDS.sh
nav_ws/install/: local_setup.sh  setup.sh
nav_ws/install/main/share/main/: package.sh
nav_ws/log/: latest_build
nav_ws/src/main/: distance.py  package.xml  setup.py
nav_ws/src/main/main/: takeoff_land_offboard.py
perception_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
perception_ws/install/bucketDetector/lib/bucketDetector/: bucket  bucketDetector  bucket_detector
perception_ws/install/bucketDetector/share/bucketDetector/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
perception_ws/install/controller/share/controller/: package.sh  package.xml
perception_ws/install/fixedWing/share/fixedWing/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
perception_ws/log/: latest_build  latest_list
perception_ws/src/bucketDetector/: package.xml  setup.cfg  setup.py
perception_ws/src/bucketDetector/bucketDetector/: =2.12  detector.py  matt_and_evan.py  offboard_takeoff_orange_land.py
perception_ws/src/controller/: setup.py
perception_ws/src/controller/controller/: camera.py  circle.py  drone_circular_flight.py  fixed_wing_takeoff_control.py  manual_plane_takeoff.py  plane_fly.py
perception_ws/src/fixedWing/: package.xml  setup.cfg  setup.py
perception_ws/src/fixedWing/fixedWing/: fixedWingTweakin.py
